07 자연스러운 히어로 이동 구현 ((requestAnimationFrame 사용)

--- a/css/game.css
+++ b/css/game.css
@@ -44,9 +44,12 @@
 }
 
 .hero_box {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: 100;
     width: 377px;
     height: 458px;
-    background-color: red;
 }
 
 .hero_box .hero {
