--- a/css/game.css
+++ b/css/game.css
@@ -67,14 +67,14 @@
     height: 100%;
     background-image: url('../lib/images/ninja_run.png');
     background-size: 3770px 458px;
-    animation: hero_run 0.3s infinite steps(10);
+    animation: hero_run 0.5s infinite steps(10);
 }
 
 .hero_box .hero.attack {
     height: 100%;
     background-image: url('../lib/images/ninja_attack.png');
     background-size: 3770px 458px;
-    animation: hero_attack 0.3s infinite steps(10);
+    animation: hero_attack 0.5s 1 steps(10);
 }
 
 .hero_bullet {
