--- a/css/game.css
+++ b/css/game.css
@@ -1,4 +1,5 @@
 .game_app {
+    overflow: hidden;
     position: relative;
     height: 100vh;
 }
@@ -8,9 +9,23 @@
     left: 0;
     bottom: 0;
     z-index: 10;
+    width: 70000px;
+    height: 100%;
+    background-image: url('../lib/images/bg_bottom.png');
+    background-repeat: repeat-x;
+    background-size: auto 100%;
+}
+
+.game_app .sky {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-image: url('../lib/images/bg_top.png');
+    background-repeat: repeat-x;
+    background-size: auto 100%;
 }
 
 @keyframes hero_idle {
