--- a/css/game.css
+++ b/css/game.css
@@ -14,6 +14,7 @@
     background-image: url('../lib/images/bg_bottom.png');
     background-repeat: repeat-x;
     background-size: auto 100%;
+    will-change: transform;
 }
 
 .game_app .sky {
@@ -65,6 +66,7 @@
     z-index: 100;
     width: 150px;
     height: 182px;
+    will-change: transform;
 }
 
 .hero_box .hero {
@@ -102,4 +104,5 @@
     background-image: url('../lib//images/hero_bullet.png');
     background-size: cover;
     background-repeat: no-repeat;
+    will-change: transform;
 }
