16 수리검 생성 위치 수정 (왼쪽 발사), 히어로 화면 왼쪽 나감 방지

--- a/css/game.css
+++ b/css/game.css
@@ -1,6 +1,7 @@
 .game_app {
     overflow: hidden;
     position: relative;
+    min-width: 1280px;
     height: 100vh;
 }
 
@@ -80,7 +81,8 @@
     transform: rotateY(180deg);
 }
 
-.hero_box .hero.run {
+.hero_box .hero.run,
+.hero_box .hero.run.attack {
     height: 100%;
     background-image: url('../lib/images/ninja_run.png');
     background-size: 1498px 182px;
