--- a/css/game.css
+++ b/css/game.css
@@ -108,3 +108,30 @@
     background-repeat: no-repeat;
     will-change: transform;
 }
+
+.monster_box {
+    position: absolute;
+    left: 700px;
+    bottom: 0;
+    z-index: 90;
+    width: 280px;
+    height: 294px;
+    will-change: transform;
+}
+
+@keyframes monster_run {
+    from {
+        background-position-x: 0px;
+    }
+
+    to {
+        background-position-x: -2242px;
+    }
+}
+
+.monster_box .monster {
+    height: 100%;
+    background-image: url('../lib/images/monster/monster_green_run.png');
+    background-size: 2242px 294px;
+    animation: monster_run 0.7s infinite steps(8);
+}
