23 몬스터 제거 처리

--- a/css/game.css
+++ b/css/game.css
@@ -119,6 +119,11 @@
     will-change: transform;
 }
 
+.monster_box.remove {
+    opacity: 0;
+    transition: opacity .2s;
+}
+
 @keyframes monster_run {
     from {
         background-position-x: 0px;
