--- a/css/game.css
+++ b/css/game.css
@@ -146,8 +146,15 @@
     left: 0;
     top: 0;
     width: 100%;
-    font-size: 110px;
-    color: #fff;
-    text-align: center;
+    height: 10px;
+    border: 2px solid #000;
     transform: translateY(-100%);
+}
+
+.monster_box .hp span {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: red;
+    transition: width .3s linear;
 }
