--- a/css/game.css
+++ b/css/game.css
@@ -158,3 +158,44 @@
     background: red;
     transition: width .3s linear;
 }
+
+.game_info {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 20;
+    width: 100%;
+    height: 150px;
+}
+
+.game_info .hero_state {
+    width: 300px;
+    height: 100%;
+    padding: 10px;
+}
+
+.game_info .hero_state .hero_img {
+    float: left;
+    width: 20%;
+}
+
+.game_info .hero_state .state_box {
+    float: left;
+    width: 80%;
+    height: 100%;
+    padding-top: 10px;
+}
+
+.game_info .hero_state .state_box .hp {
+    width: 100%;
+    height: 10px;
+    border: 1px solid #000;
+}
+
+.game_info .hero_state .state_box .hp span {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    transition: width .3s linear
+}
