--- a/css/game.css
+++ b/css/game.css
@@ -60,6 +60,16 @@
     }
 }
 
+@keyframes hero_crash {
+    from {
+        background-position-x: 0px;
+    }
+
+    to {
+        background-position-x: -299px;
+    }
+}
+
 .hero_box {
     position: fixed;
     left: 0;
@@ -94,6 +104,19 @@
     background-image: url('../lib/images/ninja_attack.png');
     background-size: 1498px 182px;
     animation: hero_attack 0.5s 1 steps(10);
+}
+
+.hero_box .hero.crash {
+    background-image: url('../lib/images/ninja_crash.png');
+    background-size: 299px 182px;
+    animation: hero_crash 0.4s 1 steps(2);
+}
+
+.hero_box .hero.dead {
+    background-image: url('../lib/images/ninja_dead.png');
+    background-size: 150px 182px;
+    animation: none;
+    transform: rotate(100deg);
 }
 
 .hero_bullet {
