29 게임 오버 처리

--- a/css/game.css
+++ b/css/game.css
@@ -222,3 +222,27 @@
     background-color: red;
     transition: width .3s linear
 }
+
+.game_over {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 200;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.game_over.active {
+    display: block;
+}
+
+.game_over p {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 150px;
+}
