--- a/css/game.css
+++ b/css/game.css
@@ -246,3 +246,35 @@
     color: #fff;
     font-size: 150px;
 }
+
+@keyframes textDamage {
+    0% {
+        opacity: 0;
+        bottom: 0;
+    }
+
+    70% {
+        opacity: 1;
+        bottom: 50px;
+    }
+
+    100% {
+        opacity: 0;
+        bottom: 90px;
+    }
+}
+
+.text_damage {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 200;
+    font-family: 'roboto';
+    font-size: 110px;
+    background: linear-gradient(to bottom, rgba(196, 41, 30, 1) 0%, rgba(230, 89, 191, 1) 100%);
+    -webkit-text-stroke: 5px rgba(255, 255, 255, .7);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textDamage .5s ease-out;
+    animation-fill-mode: both;
+}
