--- a/css/game.css
+++ b/css/game.css
@@ -157,6 +157,16 @@
     }
 }
 
+@keyframes monster_run_boss {
+    from {
+        background-position-x: 0px;
+    }
+
+    to {
+        background-position-x: -3600px;
+    }
+}
+
 .monster_box .monster {
     height: 100%;
     background-image: url('../lib/images/monster/monster_green_run.png');
@@ -176,6 +186,39 @@
     background-image: url('../lib/images/monster/monster_pink_run.png');
     background-size: 2242px 294px;
     animation: monster_run 0.7s infinite steps(8);
+}
+
+.monster_box.green_mon_boss {
+    width: 450px;
+    height: 472px;
+}
+
+.monster_box.green_mon_boss .monster {
+    background-image: url('../lib/images/monster/monster_green_run.png');
+    background-size: 3600px 472px;
+    animation: monster_run_boss 1s infinite steps(8);
+}
+
+.monster_box.yellow_mon_boss {
+    width: 450px;
+    height: 472px;
+}
+
+.monster_box.yellow_mon_boss .monster {
+    background-image: url('../lib/images/monster/monster_yellow_run.png');
+    background-size: 3600px 472px;
+    animation: monster_run_boss 1s infinite steps(8);
+}
+
+.monster_box.pink_mon_boss {
+    width: 450px;
+    height: 472px;
+}
+
+.monster_box.pink_mon_boss .monster {
+    background-image: url('../lib/images/monster/monster_pink_run.png');
+    background-size: 3600px 472px;
+    animation: monster_run_boss 1s infinite steps(8);
 }
 
 .monster_box .hp {
