--- a/css/game.css
+++ b/css/game.css
@@ -362,3 +362,11 @@
     animation: stageStart 1.5s;
     animation-fill-mode: both;
 }
+
+.game_info .score_box {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #fff;
+    font-size: 2rem;
+}
