--- a/css/game.css
+++ b/css/game.css
@@ -70,6 +70,16 @@
     }
 }
 
+@keyframes hero_slide {
+    from {
+        background-position-x: 0px;
+    }
+
+    to {
+        background-position-x: -1498px;
+    }
+}
+
 .hero_box {
     position: fixed;
     left: 0;
@@ -117,6 +127,12 @@
     background-size: 150px 182px;
     animation: none;
     transform: rotate(100deg);
+}
+
+.hero_box .hero.slide {
+    background-image: url('../lib/images/ninja_slide.png');
+    background-size: 1498px 182px;
+    animation: hero_slide 0.7s 1 steps(10);
 }
 
 .hero_bullet {
