--- a/css/game.css
+++ b/css/game.css
@@ -80,6 +80,24 @@
     }
 }
 
+@keyframes hero_levelup {
+    0% {
+        opacity: 0;
+    }
+
+    20% {
+        opacity: 1;
+    }
+
+    80% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
 .hero_box {
     position: fixed;
     left: 0;
@@ -133,6 +151,23 @@
     background-image: url('../lib/images/ninja_slide.png');
     background-size: 1498px 182px;
     animation: hero_slide 0.7s 1 steps(10);
+}
+
+.hero_box .level_up {
+    position: absolute;
+    left: 0%;
+    bottom: 100%;
+    width: 200px;
+    height: 42px;
+    background-image: url('../lib/images/levelup.png');
+    background-size: cover;
+    transform: translateX((-50%));
+    opacity: 0;
+}
+
+.hero_box .level_up.active {
+    animation: hero_levelup 1s linear;
+    animation-fill-mode: both;
 }
 
 .hero_bullet {
@@ -273,6 +308,15 @@
 .game_info .hero_state .hero_img {
     float: left;
     width: 20%;
+    position: relative;
+}
+
+.game_info .hero_state .hero_img .level_box {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    font-size: 14px;
+    color: #fff;
 }
 
 .game_info .hero_state .state_box {
@@ -293,6 +337,21 @@
     width: 100%;
     height: 100%;
     background-color: red;
+    transition: width .3s linear
+}
+
+.game_info .hero_state .state_box .exp {
+    width: 100%;
+    height: 10px;
+    margin-top: 5px;
+    border: 1px solid #000;
+}
+
+.game_info .hero_state .state_box .exp span {
+    display: block;
+    width: 0%;
+    height: 100%;
+    background-color: #ffd700;
     transition: width .3s linear
 }
 
