--- a/css/game.css
+++ b/css/game.css
@@ -529,3 +529,20 @@
     bottom: 5px;
     color: #bf0000;
 }
+
+.quest_talk .npc_img {
+    float: left;
+    width: 10%;
+}
+
+.quest_talk p {
+    float: left;
+    width: 90%;
+    padding-left: 20px;
+    color: #222;
+    font-size: 20px;
+}
+
+.quest_talk p span {
+    color: red;
+}
