--- a/css/game.css
+++ b/css/game.css
@@ -218,6 +218,16 @@
     }
 }
 
+@keyframes zombie_king_run {
+    from {
+        background-position-x: 0px;
+    }
+
+    to {
+        background-position-x: -4300px;
+    }
+}
+
 .monster_box .monster {
     height: 100%;
     background-image: url('../lib/images/monster/monster_green_run.png');
@@ -270,6 +280,17 @@
     background-image: url('../lib/images/monster/monster_pink_run.png');
     background-size: 3600px 472px;
     animation: monster_run_boss 1s infinite steps(8);
+}
+
+.monster_box.zombie_king {
+    width: 430px;
+    height: 519px;
+}
+
+.monster_box.zombie_king .monster {
+    background-image: url('../lib/images/monster/zombie_run.png');
+    background-size: 4300px 519px;
+    animation: zombie_king_run 1s infinite steps(10);
 }
 
 .monster_box .hp {
